# fastApi-boilerplate

./: DockerFile  Dockerfile  main.py  pyproject.toml
configurations/: __init__.py  database.py  database_configuration.py
models/: __init__.py  role_model.py  user_model.py
models/schema/: __init__.py  role.py  user.py
routes/: role_route.py  user_route.py
services/: __init__.py  role_services.py  user_services.py
utilities/: security.py
