[tool.poetry]
name = "alchemy_project"
version = "0.1.0"
description = ""
authors = ["Hypercodding <mohammadhammad302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
bcrypt = "^4.1.3"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
